--- a/perfil.html
+++ b/perfil.html
@@ -31,6 +31,7 @@
             </section>
             <section class="profile-link">
                 <a href="perfil.html">Sobre mí</a>
+                <a href="index.html">Inicio</a>
             </section>
 
         </nav>
